# AI-Relay-Technology

./: .gitignore  AGENTS.md  ANTHROPIC_FIX_SUMMARY.md  ANTHROPIC_FORMAT_CONVERSION_FIX.md  BUGFIX_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FINAL_REPORT.md  QUICK_REFERENCE.md  README.md  README_USAGE.md  START_HERE.md  TESTING_GUIDE.md  TEST_CLAUDE_CODE_MODELS.md  UPDATE.md  VERIFICATION_REPORT.md  debug_detailed.py  debug_stream.py  diagnostic.py  index.html  package-lock.json  package.json  test_anthropic_stream.py  test_glm_stream.py  tools.defaults.json  view_logs.py
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: tools.defaults.json
src-tauri/src/: autoconfig.rs  config.rs  db.rs  error.rs  lib.rs  logger.rs  pricing.rs  projects.rs  server.rs  tools.rs
src-tauri/src/adapters/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/forward/: client.rs  context.rs  error.rs  limits.rs  middleware.rs  mod.rs  routing.rs
src-tauri/src/forward/handlers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/routing/: latency.rs  mod.rs
src-tauri/src/tools/: user_config.rs
src/components/: index.ts
src/components/Badge/: Badge.tsx  StatusBadge.tsx  index.ts
src/components/Button/: Button.tsx
src/components/Card/: Card.tsx  StatCard.tsx  index.ts
src/components/Input/: Input.tsx  Select.tsx  index.ts
src/components/Modal/: Modal.tsx  (+2 more)
src/pages/: Dashboard.tsx  Models.tsx  Projects.tsx  Settings.tsx  Tools.tsx
src/theme/: index.ts  presets.ts  runtime.ts  theme.ts
(+8 files in other folders)
